k8s/blog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: demo-blog
spec:
  selector:
    app: blog
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
